--- a/Gilles Vidal Campus Landing Page/index.html
+++ b/Gilles Vidal Campus Landing Page/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link rel="icon" href="/iconoHeader.svg" type="image/svg+xml">
     <title>Campus Gilles Vidal</title>
   </head>
   <body>
@@ -10,3 +11,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+git
