--- a/ClimaTecnico/index.html
+++ b/ClimaTecnico/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta name="trustpilot-one-time-domain-verification-id" content="7dc27f42-8356-41e0-a4f5-06687a4c6433"/>
     <link rel="icon" href="/iconoHeader.svg" type="image/svg+xml">
     <title>Climatecnico</title>
   </head>
