--- a/ClimaTecnico/index.html
+++ b/ClimaTecnico/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="es">
   <head>
+    <meta name="google-site-verification" content="Wxa_7ELNOm0dAZx0iEFFkEk0dlZXoClZ3Lpi0yxnZXU" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="trustpilot-one-time-domain-verification-id" content="7dc27f42-8356-41e0-a4f5-06687a4c6433"/>
