--- a/Tecnoclima/index.html
+++ b/Tecnoclima/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="trustpilot-one-time-domain-verification-id" content="7dc27f42-8356-41e0-a4f5-06687a4c6433"/>
-    <link rel="icon" href="/Logoblack@3x.svg" type="image/svg+xml">
-    <title>Tecnoclima</title>
+    <link rel="icon" href="/logoPestaña@3x.svg" type="image/svg+xml">
+    <title>Tecno clima</title>
   </head>
   <body>
     <div id="root"></div>
